# cli-agent-task-boundary

./: .env.example  .gitignore  README.md  SECURITY.md  Task Boundary Detector.bat  adapters.py  cli.py  detector.py  embeddings_detector.py  gui.py  install_layer2.bat  llm_detector.py  pyproject.toml  report_finops_once.bat  reporter.py  requirements.txt  run.sh  settings_dialog.py  start_finops_server.bat  token_economy.py
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
server/: __init__.py  __main__.py  app.py
tests/: test_detector.py  test_reporter.py  test_server.py
