[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-task-boundary"
version = "0.1.0"
description = "Local task-boundary detection and anonymous FinOps metrics for CLI assistant sessions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
server = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "duckdb>=1.0.0",
]
embeddings = [
  "sentence-transformers>=2.7.0",
  "numpy>=1.24.0",
]
test = [
  "duckdb>=1.0.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = [
  "adapters",
  "cli",
  "detector",
  "embeddings_detector",
  "gui",
  "llm_detector",
  "reporter",
  "settings_dialog",
  "token_economy",
]
packages = ["server"]
